--- a/package.json
+++ b/package.json
@@ -14,11 +14,19 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "antd": "^4.0.0",
     "gatsby": "^2.19.7",
+    "gatsby-plugin-react-helmet": "^3.1.22",
+    "gatsby-plugin-typescript": "^2.2.0",
+    "gatsby-source-graphql": "^2.1.33",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
+    "@types/node": "^13.7.7",
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
     "prettier": "^1.19.1"
   },
   "repository": {
