--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@types/react-redux": "^7.1.7",
     "antd": "^4.0.0",
     "gatsby": "^2.19.7",
+    "gatsby-plugin-antd": "^2.2.0",
     "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-plugin-typescript": "^2.2.0",
     "gatsby-source-graphql": "^2.1.33",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@types/node": "^13.7.7",
